Fix footer z-index

--- a/src/components/app/Footer/Footer.scss
+++ b/src/components/app/Footer/Footer.scss
@@ -13,6 +13,7 @@
     position: sticky;
     bottom: 0;
     left: 0;
+    z-index: 10;
 
     .undo-redo-controls {
         display: flex;
